[package]
name = "string-replace-all"
version = "0.1.0"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
edition = "2021"
description = "Efficiently replaces all occurrences of a pattern in a string with a specified replacement, supporting both exact matches and regex-based replacements."
repository = "https://github.com/jzombie/rust-string-replace-all"
license = "MIT"

[dependencies]
doc-comment = "0.3.3"
regex = "1.11.1"
